# RPS

./: .gitignore  AGENTS.md  Cargo.toml  UpgradeLog.htm  bacon.toml  config.toml
Assets/Prefabs/: RPSAgent.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: InstantiationTest.cs  RPSLogic.cs  RPSRule.cs  RPSView.cs
ProjectSettings/: ProjectSettings.asset
raw_prompts/: description.md  description_after_working_init.md
src/: main.rs
